FlightPath 5.x Changelog
========================

2018-12-31
  Made small changes to advise.module and blank_degrees.module, so that if a blank degree plan
  is loaded with prereqs, they are not blocked.  Also, to make it easier for custom modules
  to use req_by_degree_id instead of blank_degree_id, if req is set.


2018-12-18
  Added new hook: hook_alter_currently_advising_box.  This allows modules to modify or add to the "currently
  advising" box, which appears at the top of the screen when a student is selected for advising.


2018-12-15
  Modified core's display of the Urgent Message screen, to better allow other modules
  to make modifications.


2018-11-26
  Fixed bug where groups split over more than one semester block were not having courses assigned
  to them correctly.  Partially due to them not having req_by_degree_id set.


2018-11-13
  Added extra data to $form_state, when duplicating an entire year's worth of data.
  
  Added fix for issue #2455, thanks to Logan Buth.  This deals with repeatable courses still appearing
  in groups, even though a setting was set saying they should be advised once enrolled. 

  Also fixed issue with maintaining keys in array for _Group::get_course_id_array function.  Issue #2456,
  credit Logan Buth.

  Issue #2470, Logan Buth.  Fixed typo causing degree_id to always be set to zero in _Course::get_quality_points.
  

2018-10-17
  Added new hook: hook_menu_alter(), for editing menu items.


2018-10-09
  Fixed a theming issue which sometimes would occur in Chrome, on the Majors search page (of the student_search module).
  

2018-05-10
  Fixed display bug in user.module, found a mis-matched </div> tag.
  

2018-05-05
  Made the function Course::load_course_from_data_string_for_requirement_clone() set the course's display_status to "ellible"
  to match the behavior of the default constructor.  Re: issue #2317, thanks to Logan Buth.


2018-04-29