@@ -6,6 +6,10 @@ FlightPath 5.x Changelog
   is loaded with prereqs, they are not blocked.  Also, to make it easier for custom modules
   to use req_by_degree_id instead of blank_degree_id, if req is set.
 
+  Made a change to _FlightPath.php, when marking substitutions as outdated.  Changed
+  a simple "else" to an "else if" to make sure some logic doesn't get executed more
+  than necessary.  (Thanks to Logan Buth #2316)
+  
 
 2018-12-18
   Added new hook: hook_alter_currently_advising_box.  This allows modules to modify or add to the "currently
